--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -11,13 +11,20 @@
     opacity: 0.8;
     border-radius: 8px;
     padding:20px;
+    -webkit-box-shadow: 0px 2px 13px 4px rgba(105,97,105,1);
+-moz-box-shadow: 0px 2px 13px 4px rgba(105,97,105,1);
+box-shadow: 0px 2px 13px 4px rgba(105,97,105,1);
 }body{
     display: flex;
     color:#fff;
     font-family: 'Merriweather Sans', sans-serif;
-    background: #0f0c29;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #C33764;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #1D2671, #C33764);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #1D2671, #C33764); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    
+
+
 
     
     
